// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdComposer test renders a snapshot with AdComposer and no ads 1`] = `<div />`;

exports[`AdComposer test renders a snapshot with more than one Ad 1`] = `
<div>
  <div
    id="ad-header"
  />
  <div
    id="intervention"
  />
</div>
`;

exports[`AdComposer test renders a snapshot with one Ad 1`] = `
<div>
  <div
    id="ad-header"
  />
</div>
`;
